# linuxWallPaperChanger

./: README.md
linuxWallpaperChanger/: README.md  meson.build  org.gnome.linuxWallpaperChanger.json
linuxWallpaperChanger/data/: meson.build  org.gnome.linuxWallpaperChanger.desktop.in  org.gnome.linuxWallpaperChanger.gschema.xml  org.gnome.linuxWallpaperChanger.metainfo.xml.in
linuxWallpaperChanger/data/icons/: meson.build
linuxWallpaperChanger/po/: POTFILES  meson.build
linuxWallpaperChanger/src/: linuxwallpaperchanger.data.gresource.xml  linuxwallpaperchanger.in  main.js  main.py  meson.build  org.gnome.linuxWallpaperChanger.data.gresource.xml  org.gnome.linuxWallpaperChanger.src.gresource.xml  window.js  window.py  window.ui
